Modifications without Hashmap@

--- a/src/test/java/utilities/Config.properties
+++ b/src/test/java/utilities/Config.properties
@@ -3,3 +3,4 @@ facebookURL = http://facebook.com
 implicitlyWait = 10
 filePath = D:/ExcelDataRead/src/test/resources/
 excelPath = D:/ExcelDataRead/src/test/resources/Book1.xlsx
+sheetName = testdata
